--- a/Eclipse/bin/Eclipse.dll.config
+++ b/Eclipse/bin/Eclipse.dll.config
@@ -13,10 +13,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
+  <connectionStrings>
+    <add name="mssql" connectionString="Data Source=FIRRAEL\SQLEXPRESS; Initial Catalog=Blog; Integrated Security=True"/>
+  </connectionStrings>
+  
   <system.web>
     
     <compilation debug="true" targetFramework="4.0" />
-
+    
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
